k8s/authService_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-deployment
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: saiyedin786/streamingapp:authservice
          ports:
            - containerPort: 3001
