k8s/chatService_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatservice
  template:
    metadata:
      labels:
        app: chatservice
    spec:
      containers:
        - name: chatservice
          image: saiyedin786/streamingapp:chatservice
          ports:
            - containerPort: 3004
