k8s/adminService_service.yml
apiVersion: v1
kind: Service
metadata:
  name: adminservice
spec:
  type: ClusterIP
  selector:
    app: adminservice
  ports:
    - port: 3003
      targetPort: 3003
