k8s/authService_service.yml
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - port: 3001
      targetPort: 3001
