k8s/chatService_service.yml
apiVersion: v1
kind: Service
metadata:
  name: chatservice
spec:
  type: ClusterIP
  selector:
    app: chatservice
  ports:
    - port: 3004
      targetPort: 3004
