k8s/streamingService_service.yml
apiVersion: v1
kind: Service
metadata:
  name: streamingservice
spec:
  type: ClusterIP
  selector:
    app: streamingservice
  ports:
    - port: 3002
      targetPort: 3002
